--- a/client/src/index.css
+++ b/client/src/index.css
@@ -80,7 +80,15 @@ body {
       "footer" 
     ; 
   }
-
+  .game-board {
+    grid-area: game;
+    width: 100%;
+    height: 100%;
+    align-self: start;
+    justify-self: center;
+    max-width: 450px;
+    max-height: 450px;
+  }
   @media screen and (min-width: 500px) { 
     .game {
       grid-template-rows: 20px 20px 1fr 20px; 
@@ -91,6 +99,9 @@ body {
         "info game " 
         "footer footer " 
       ; 
+    }
+    .game-board {
+      max-width: calc(100vh - 60px);
     }
   }
 
@@ -117,15 +128,7 @@ body {
   grid-area: header;
 }
 
-.game-board {
-  grid-area: game;
-  width: 100%;
-  height: 100%;
-  align-self: start;
-  justify-self: center;
-  max-width: 450px;
-  max-height: 450px;
-}
+
 
   .board-container {
     width: 100%; 
@@ -167,4 +170,38 @@ body {
   .newGameBtn {
     margin-top: 10px; 
     margin-left: 20px;
+  }
+
+#formContainer {
+  position: absolute;
+  top:0;
+  left:0;
+  right:0;
+  bottom: 0;
+  z-index: 999;
+  margin: 10px;
+}
+
+  #regForm {
+    background: white;
+    position: relative;
+    padding: 30px 5px 5px 5px;
+    border: 3px solid lightskyblue;
+    height: calc(100% - 41px);
+    width: calc(100% - 16px);
+    max-width: 400px;
+    max-height: 500px;
+  }
+
+  #regForm button {
+    position: absolute;
+    top:0;
+    right: 0;
+  }
+
+  #regForm input[type=text], input[type=password] {
+    margin-top: 5px;
+    margin-bottom: 10px;
+    width: 100%;
+    max-width: 250px;
   }
