--- a/client/src/index.css
+++ b/client/src/index.css
@@ -185,12 +185,14 @@ body {
   #regForm {
     background: white;
     position: relative;
-    padding: 30px 5px 5px 5px;
+    padding: 10px 5px 5px 5px;
     border: 3px solid lightskyblue;
     height: calc(100% - 41px);
     width: calc(100% - 16px);
     max-width: 400px;
     max-height: 500px;
+    margin: auto;
+    overflow: auto;
   }
 
   #regForm button {
@@ -200,8 +202,8 @@ body {
   }
 
   #regForm input[type=text], input[type=password] {
-    margin-top: 5px;
-    margin-bottom: 10px;
+    margin-top: 3px;
+    margin-bottom: 6px;
     width: 100%;
     max-width: 250px;
   }
